<resources>
    <string name="app_name">Smart Garden</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="details">Details</string>
    <string name="last_activation_at">activated at</string>
    <string name="time">Time</string>
    <string name="water">Water</string>
    <string name="save">Save</string>
    <string name="mustBeGreaterThan0">Value greater than 0</string>
    <string name="newScheduleItem">New schedule item</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="oneTimeActivation">One-time activation</string>
    <string name="errorCannotUpdateSchedule">Unable to update the schedule</string>
    <string name="errorCannotFetchNodes">Unable to fetch the schedule</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="network_error">Network error</string>
    <string name="invalid_credentials_error">Invalid credentials error</string>
    <string name="unknown_error">Unknown error</string>
</resources>
