<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_xxlarge"
        android:minWidth="280dp"
        android:padding="@dimen/padding_large"
        android:theme="@style/ThemeOverlay.AppTheme.LightPrimaryColor">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneTimeActivation"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/water"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:hint="@string/water"
            app:layout_constraintBottom_toTopOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:startIconDrawable="@drawable/water_outline"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/waterEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <requestFocus />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xlarge"
            android:layout_marginBottom="@dimen/padding_default"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/cancelAddMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/water" />

        <Space
            android:id="@+id/cancelAddMargin"
            android:layout_width="@dimen/padding_default"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toBottomOf="@id/water" />

        <Button
            android:id="@+id/add"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xlarge"
            android:layout_marginBottom="@dimen/padding_default"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelAddMargin"
            app:layout_constraintTop_toBottomOf="@id/water" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>